# Ola

./: DATA.md  README.md  pretrained  pyproject.toml
inference/: infer.py
ola/: utils.py
ola/datasets/: preprocess.py
ola/model/: builder.py  ola_arch.py
ola/model/multimodal_encoder/: oryx_vit.py
ola/model/multimodal_resampler/: builder.py
ola/model/speech_encoder/: speech_encoder.py
ola/train/: ola_trainer.py  train.py
scripts/: finetune_ola.sh  finetune_ola_image.sh  finetune_ola_video.sh  train_ola.sh
tools/: convert_mp4_wav.py  create_patch.py
