[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ola"
version = "1.0.0"
description = "Omni-Modal Language Model"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch", "torchvision", "torchaudio",
    "transformers", "tokenizers", "sentencepiece", "shortuuid",
    "accelerate", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn",
    "gradio", "gradio_client",
    "requests", "httpx", "uvicorn", "fastapi", "soundfile",
    "einops", "einops-exts", "timm",
    "openai-whisper", "setuptools", "omegaconf", "loguru", "av", "librosa",
    "hqq", "gemlite", "moviepy", "decord", "deepspeed",
]

[project.optional-dependencies]
train = ["deepspeed==0.12.6", "ninja", "wandb", "tensorboardX"]
build = ["build", "twine"]

[tool.setuptools.packages.find]
exclude = ["data", "checkpoints", "logs", "models", "fairseq", "flash-attention"]

[tool.wheel]
exclude = ["data", "checkpoints", "logs", "models", "fairseq", "flash-attention"]
